--- a/addidas-clone/HTML CSS/css/style.css
+++ b/addidas-clone/HTML CSS/css/style.css
@@ -8,6 +8,7 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: #000;
+    overflow: hidden;
 }
 
 header {
@@ -130,6 +131,13 @@ nav {
     display: none;
     font-size: 1.8rem;
     cursor: pointer;
+}
+
+.hero-section-image img {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
 
 @media (max-width: 1024px) {
